# tgbotool

./: Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: attrs.rs  builder.rs  command.rs  fields.rs  lib.rs  multipart.rs  parser.rs  tg_method.rs
examples/: cuckoo.rs  polling.rs  webhook.rs
src/: client.rs  command.rs  lib.rs  main.rs  methods.rs  types.rs
src/methods/: answer_callback_query.rs  get_file.rs  get_updates.rs  media.rs  message.rs  poll.rs  send_media.rs  send_media_group.rs  send_message.rs  send_photo.rs  send_poll.rs
src/types/: chat.rs  game.rs  message.rs  passport.rs  payment.rs  update.rs  user.rs
