[workspace]
members = [
  "derive"
]

[package]
name = "tgbotool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tgbotool-derive = { version = "0.1.0", path = "derive"}
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
serde_with = { version = "3.2.0", features = ["macros"] }

[dev-dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "4.3.21", features = ["derive", "env"] }
tokio = { version = "1.31.0", features = ["fs", "macros", "rt-multi-thread"] }
