[workspace]
members = [
  "derive"
]

[package]
name = "tgbotool"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tgbotool-derive = { version = "0.1.0", path = "derive"}
reqwest = { version = "0.11.22", features = ["json", "multipart"] }
serde_with = { version = "3.3.0", features = ["macros"] }

[dev-dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
clap = { version = "4.4.6", features = ["derive", "env"] }
tokio = { version = "1.32.0", features = ["fs", "macros", "rt-multi-thread"] }
